Persiapan Dataset : RFM Customer

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +262,138 @@
     "axs.set_ylabel(\"Feature 1\")\n",
     "axs.legend(title=\"Cluster\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>8. Persiapan Dataset : RFM Customer</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12346</td>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27904840000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>423420000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348</td>\n",
+       "      <td>2</td>\n",
+       "      <td>41</td>\n",
+       "      <td>414092000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12350</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33</td>\n",
+       "      <td>119478000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12352</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>449984000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id  frequency  recency     monetary\n",
+       "0        12346          1       48  27904840000\n",
+       "1        12347          2       40    423420000\n",
+       "2        12348          2       41    414092000\n",
+       "3        12350          1       33    119478000\n",
+       "4        12352          3        6    449984000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Import Library\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Membaca Data\n",
+    "data = pd.read_csv(f\"https://storage.googleapis.com/dqlab-dataset/RFM_customer.csv\", encoding=\"utf-8\")\n",
+    "\n",
+    "# Menampilkan Data\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Penjelasan Feature Feature Dataset</h3>\n",
+    "<ul>\n",
+    "  <li><strong>customer_id</strong> : Identifikasi unik untuk setiap pelanggan. Setiap baris dalam dataset mewakili data untuk satu pelanggan tertentu</li>\n",
+    "  <li><strong>frequency</strong> : Kolom ini menunjukan seberapa sering seorang pelanggan melakukan transaksi atau pembelian. Semakin tinggi nilainya semakin sering pelanggan tersebut malakukan transaksi</li>\n",
+    "  <li><strong>recency</strong> : Kolom ini mengindikasikan seberapa baru pelanggan tersebut melakukan transaksi terakhir. Nilai lebih rendah menunjukan bahwa transaksi terakhir dilakukan lebih baru</li>\n",
+    "  <li><strong>monetary</strong> : Kolom ini mewakili jumlah uang yang telah dibelanjakan oleh pelanggan. Nilai ini dihitung sebagai total pembelian atau transaksi yang dilakukan oleh pelanggan</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>9. Melihat Tipe Data Dari Setiap Kolom</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Melihat informasi data"
    ]
   },
   {
