--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -389,11 +389,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensi dataframe: 1625 baris dan 4 kolom\n",
+      "Info dataframe:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1625 entries, 0 to 1624\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype\n",
+      "---  ------       --------------  -----\n",
+      " 0   customer_id  1625 non-null   int64\n",
+      " 1   frequency    1625 non-null   int64\n",
+      " 2   recency      1625 non-null   int64\n",
+      " 3   monetary     1625 non-null   int64\n",
+      "dtypes: int64(4)\n",
+      "memory usage: 50.9 KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Melihat informasi data"
+    "# Melihat dimensi dataframe\n",
+    "print(f\"Dimensi dataframe: {data.shape[0]} baris dan {data.shape[1]} kolom\")\n",
+    "\n",
+    "# Melihat informasi dataframe\n",
+    "print(f\"Info dataframe:\")\n",
+    "print(data.info())"
    ]
   },
   {
@@ -402,6 +428,31 @@
    "source": [
     "<h2></h2>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Kesimpulan</h3>\n",
+    "<ul>\n",
+    "  <li><strong>Struktur Data</strong></li>\n",
+    "  <ol>\n",
+    "    <li>Dataframe memiliki 1625 Baris dan 4 Kolom</li>\n",
+    "    <li>Terdapat 4 kolom : customer_id, frequency, recency dan monetary</li>\n",
+    "    <li>Semua kolom memiliki tipe data <strong>int64</strong></li>\n",
+    "    <li>Tidak ada null value (missing values) di semua kolom</li>\n",
+    "  </ol>\n",
+    "  <li><strong>Ringkasan Dataframe</strong></li>\n",
+    "  <ol>\n",
+    "    <li>Berdasarkan 4 kolom yang terdapat dalam Dataframe, Dataframe digunakan untuk analisis <strong>RFM</strong> (<strong>R</strong>ecency - <strong>F</strong>requency - <strong>M</strong>onetary) yang umum digunakan dalam analisis perilaku pelanggan dan segmentasi pelanggan</li>\n",
+    "  </ol>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
