Missing Value dan Menghapus Kolom customer_id

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -602,6 +602,143 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>11. Missing Value dan Menghapus Kolom customer_id</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mengecek missing value tiap kolom:\n",
+      "customer_id    False\n",
+      "frequency      False\n",
+      "recency        False\n",
+      "monetary       False\n",
+      "dtype: bool\n",
+      "False\n",
+      "\n",
+      "Jumlah missing value tiap kolom:\n",
+      "customer_id    0\n",
+      "frequency      0\n",
+      "recency        0\n",
+      "monetary       0\n",
+      "dtype: int64\n",
+      "0\n",
+      "\n",
+      "Persentase missing value tiap kolom:\n",
+      "customer_id    0.0\n",
+      "frequency      0.0\n",
+      "recency        0.0\n",
+      "monetary       0.0\n",
+      "dtype: float64\n",
+      "\n",
+      "5 data teratas setelah kolom customer_id dihapus:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27904840000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>423420000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>41</td>\n",
+       "      <td>414092000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>33</td>\n",
+       "      <td>119478000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>449984000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   frequency  recency     monetary\n",
+       "0          1       48  27904840000\n",
+       "1          2       40    423420000\n",
+       "2          2       41    414092000\n",
+       "3          1       33    119478000\n",
+       "4          3        6    449984000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Mengecek missing value\n",
+    "print(f\"Mengecek missing value tiap kolom:\")\n",
+    "print(data.isnull().any())\n",
+    "print(data.isnull().any().any())\n",
+    "print(f\"\\nJumlah missing value tiap kolom:\")\n",
+    "print(data.isnull().sum())\n",
+    "print(data.isnull().sum().sum())\n",
+    "print(f\"\\nPersentase missing value tiap kolom:\")\n",
+    "print(data.isnull().mean() * 100)\n",
+    "\n",
+    "# Menghapus kolom customer_id\n",
+    "RFM_km = data.drop(['customer_id'], axis=1)\n",
+    "\n",
+    "# Menampilkan data setelah kolom customer_id dihapus\n",
+    "print(f\"\\n5 data teratas setelah kolom customer_id dihapus:\")\n",
+    "display(RFM_km.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
