Melakukan Standarisasi Data

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -733,6 +733,331 @@
     "print(f\"\\n5 data teratas setelah kolom customer_id dihapus:\")\n",
     "display(RFM_km.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>12. Melakukan Standarisasi Data</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Statistik data setelah standardisasi:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1625.00</td>\n",
+       "      <td>1625.00</td>\n",
+       "      <td>1625.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.91</td>\n",
+       "      <td>36.46</td>\n",
+       "      <td>332158449.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.11</td>\n",
+       "      <td>26.93</td>\n",
+       "      <td>1140957807.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>310000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>75202000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>138067000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>54.00</td>\n",
+       "      <td>290249000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>34.00</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>27904840000.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      frequency  recency        monetary\n",
+       "count   1625.00  1625.00         1625.00\n",
+       "mean       1.91    36.46    332158449.85\n",
+       "std        2.11    26.93   1140957807.24\n",
+       "min        1.00     1.00       310000.00\n",
+       "25%        1.00    13.00     75202000.00\n",
+       "50%        1.00    32.00    138067000.00\n",
+       "75%        2.00    54.00    290249000.00\n",
+       "max       34.00    90.00  27904840000.00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5 data teratas setelah standardisasi:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.431543</td>\n",
+       "      <td>0.428749</td>\n",
+       "      <td>24.173698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.042280</td>\n",
+       "      <td>0.131641</td>\n",
+       "      <td>0.080011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.042280</td>\n",
+       "      <td>0.168780</td>\n",
+       "      <td>0.071833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.431543</td>\n",
+       "      <td>-0.128328</td>\n",
+       "      <td>-0.186463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.516102</td>\n",
+       "      <td>-1.131065</td>\n",
+       "      <td>0.103301</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   frequency   recency   monetary\n",
+       "0  -0.431543  0.428749  24.173698\n",
+       "1   0.042280  0.131641   0.080011\n",
+       "2   0.042280  0.168780   0.071833\n",
+       "3  -0.431543 -0.128328  -0.186463\n",
+       "4   0.516102 -1.131065   0.103301"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Statistik data setelah standardisasi:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1625.00</td>\n",
+       "      <td>1625.00</td>\n",
+       "      <td>1625.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.00</td>\n",
+       "      <td>-0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-0.43</td>\n",
+       "      <td>-1.32</td>\n",
+       "      <td>-0.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.43</td>\n",
+       "      <td>-0.87</td>\n",
+       "      <td>-0.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-0.43</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>-0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>-0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>15.20</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>24.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      frequency  recency monetary\n",
+       "count   1625.00  1625.00  1625.00\n",
+       "mean       0.00    -0.00    -0.00\n",
+       "std        1.00     1.00     1.00\n",
+       "min       -0.43    -1.32    -0.29\n",
+       "25%       -0.43    -0.87    -0.23\n",
+       "50%       -0.43    -0.17    -0.17\n",
+       "75%        0.04     0.65    -0.04\n",
+       "max       15.20     1.99    24.17"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Import StandardScaler agar dapat melakukan standardisasi data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "standard_scaler = StandardScaler()\n",
+    "RFM_standard = standard_scaler.fit_transform(RFM_km)\n",
+    "RFM_standard = pd.DataFrame(RFM_standard, columns=RFM_km.columns)\n",
+    "\n",
+    "# Menampilkan data statistik setelah standardisasi\n",
+    "print(f\"\\nStatistik data setelah standardisasi:\")\n",
+    "display(RFM_km.describe().apply(lambda x: x.apply('{0:.2f}'.format)))\n",
+    "\n",
+    "# Menampilkan data setelah standardisasi\n",
+    "print(f\"\\n5 data teratas setelah standardisasi:\")\n",
+    "display(RFM_standard.head())\n",
+    "\n",
+    "# Menampilkan data statistik setelah standardisasi\n",
+    "print(f\"\\nStatistik data setelah standardisasi:\")\n",
+    "display(RFM_standard.describe().apply(lambda x: x.apply('{0:.2f}'.format)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
