Melakukan Standarisasi Data

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -17,7 +17,7 @@
     "  <li>Definisi Clustering</li>\n",
     "  <ul>\n",
     "    <li><strong>Clustering</strong> : Salah satu Algortima Machine Learning dengan kategori Unsupervised Learning</li>\n",
-    "    <li><strong>Clustering</strong> : Salah satu teknik analisis data untuk memahami data dengan mengelompokan data data tersebut ke dalam beberapa cluster</li>\n",
+    "    <li><strong>Clustering</strong> : Salah satu teknik analisis data untuk memahami data dengan mengelompokan data - data tersebut ke dalam beberapa cluster</li>\n",
     "    <li><strong>Clustering</strong> : Data - data dikelompokan berdasarkan kesamaan atau kemiripan karakteristik</li>\n",
     "  </ul>\n",
     "</ul>"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
