Kesimpulan Proses Implementasi - Means Clustering

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -1072,6 +1072,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil prediksi kluster:\n",
+      "[2 0 0 ... 1 1 0]\n",
+      "\n",
+      "Data cluster:\n",
+      "0    2\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "4    0\n",
+      "Name: cluster, dtype: int32\n",
+      "\n",
+      "Data RFM dengan kluster:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>monetary</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.431543</td>\n",
+       "      <td>0.428749</td>\n",
+       "      <td>24.173698</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.042280</td>\n",
+       "      <td>0.131641</td>\n",
+       "      <td>0.080011</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.042280</td>\n",
+       "      <td>0.168780</td>\n",
+       "      <td>0.071833</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.431543</td>\n",
+       "      <td>-0.128328</td>\n",
+       "      <td>-0.186463</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.516102</td>\n",
+       "      <td>-1.131065</td>\n",
+       "      <td>0.103301</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   frequency   recency   monetary  cluster\n",
+       "0  -0.431543  0.428749  24.173698        2\n",
+       "1   0.042280  0.131641   0.080011        0\n",
+       "2   0.042280  0.168780   0.071833        0\n",
+       "3  -0.431543 -0.128328  -0.186463        0\n",
+       "4   0.516102 -1.131065   0.103301        0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah data tiap kluster:\n",
+      "cluster\n",
+      "0    1091\n",
+      "1     528\n",
+      "2       6\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import KMeans agar dapat melakukan clustering\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Mengatur jumlah kluster yang akan digunakan sebanyak 3 kluster\n",
+    "model_kmeans = KMeans(n_clusters=3, random_state=42)\n",
+    "model_kmeans.fit(RFM_standard)\n",
+    "\n",
+    "# Prediksi kluster dari data\n",
+    "model_kmeans_predict = model_kmeans.predict(RFM_standard)\n",
+    "\n",
+    "# Menampilkan hasil prediksi kluster\n",
+    "print(f\"Hasil prediksi kluster:\")\n",
+    "print(model_kmeans_predict)\n",
+    "\n",
+    "\n",
+    "# Membuat variable cluster untuk menyimpan hasil prediksi kluster\n",
+    "cluster = pd.Series(model_kmeans_predict, name='cluster')\n",
+    "print(f\"\\nData cluster:\")\n",
+    "print(cluster.head())\n",
+    "\n",
+    "# Menggabungkan data awal standar dan data kluster\n",
+    "RFM_labeled = pd.concat([RFM_standard, cluster], axis=1)\n",
+    "print(f\"\\nData RFM dengan kluster:\")\n",
+    "display(RFM_labeled.head())\n",
+    "\n",
+    "# Menghitung jumlah data tiap kluster\n",
+    "print(f\"Jumlah data tiap kluster:\")\n",
+    "print(RFM_labeled['cluster'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Kesimpulan Proses Implementasi K - Means Clustering</h3>\n",
+    "<ul>\n",
+    "  <li>Terdapat 3 cluster yang didefinisikan pada Implementasi K - Means Clustering</li>\n",
+    "  <li>Jumlah data didominasi oleh <strong>Cluster 0</strong> dengan rincian sebagai berikut : </li>\n",
+    "    <ol>\n",
+    "      <li><strong>Cluster 0</strong> = 1091</li>\n",
+    "      <li><strong>Cluster 1</strong> = 528</li>\n",
+    "      <li><strong>Cluster 2</strong> = 6</li>\n",
+    "    </ol>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
