Proses Menyimpulkan Rekomendasi Bisnis Berdasarkan Box Plot pada Setiap Cluster

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1298,10 +1298,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h2>Kesimpulan Proses Menampilkan Cluster dengan Box Plot</h2>\n",
+    "<ul>\n",
+    "  <li>Sebanyak <strong>1091</strong> konsumen berada pada cluster 0. Cluster 0 merupakan konsumen yang melakukan transaksi akhir - akhir ini atau cukup baru melakukan transaksi, dengan frekuensi cukup tinggi dibanding cluster 1. Cluster 0 memiliki nilai transaksi sangat rendah</li>\n",
+    "  <li>Sebanyak <strong>528</strong> konsumen berada pada cluster 1. Cluster 1 merupakan konsumen yang sudah cukup lama tidak melakukan transaksi, dengan frekuensi sangat rendah dibanding cluster 0. Cluster 1 memiliki nilai transaksi sangat rendah</li>\n",
+    "  <li>Sebanyak <strong>6</strong> konsumen berada pada cluster 2. Cluster 2 merupakan konsumen yang melakukan transaksi akhir - akhir ini atau cukup baru melakukan transaksi, dengan frekuensi cukup tinggi dibanding cluster lainnya. Cluster 2 memiliki nilai transaksi sangat besar</li>\n",
+    "</ul>\n",
+    "<h3>Rekomendasi Bisnis</h3>\n",
+    "<ol>\n",
+    "  <li>Perusahaan harus mejaga relasi dengan Konsumen Cluster 2, karena memiliki nilai transaksi sangat besar serta memiliki nilai frekuensi sangat tinggi dibanding cluster laininya dengan memberikan bonus serta diskon khusus. Cluster 2 bisa dikategorikan sebagai Konsumen VIP</li>\n",
+    "  <li>Perusahaan perlu menjaga relasi dengan Konsumen Cluster 0, karena mayoritas dari konsumen berada di cluster 0. Perusahaan dapat memberikan bonus serta diskon untuk meningkatkan minat konsumen untuk terus bertransaksi serta meningkatkan total transaksi setiap konsumen </li>\n",
+    "  <li>Perusahaan perlu memberikan treatment khusus kepada konsumen Cluster 1, konsumen cluster 1 memerlukan dorongan supaya bisa mengenal lebih banyak produk produk perusahaan dengan memberikan iklan katalog perusahaan disertai dengan promo promo khusus</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
