Populasi - Sampel - Observasi

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -32,6 +32,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>02. Beberapa Konsep Dasar Statistika</h2>\n",
+    "<h3>Populasi - Sampel - Observasi/Pengamatan</h3>\n",
+    "<ol>\n",
+    "  <li><strong>Observasi</strong> -> Suatu unit yang diukur dengan data</li>\n",
+    "  <ul>\n",
+    "    <li>Siswa</li>\n",
+    "    <li>Warga Negara</li>\n",
+    "    <li>Hewan</li>\n",
+    "    <li>Kendaraan</li>\n",
+    "  </ul>\n",
+    "  <li><strong>Populasi</strong> -> Koleksi dari keseluruhan Observasi</li>\n",
+    "  <ul>\n",
+    "    <li>Semua siswa yang ada di sekolah</li>\n",
+    "    <li>Semua warga negara Indonesia</li>\n",
+    "    <li>Semua hewan yang ada di hutan lindung</li>\n",
+    "    <li>Semua kendaraan di Jakarta</li>\n",
+    "  </ul>\n",
+    "  <li><strong>Sampel</strong> -> Sub koleksi dari populasi</li>\n",
+    "  <ul>\n",
+    "    <li>5 siswa dari masing - masing kelas di suatu sekolah</li>\n",
+    "    <li>100 warga negara Indonesia yang diambil dari beberapa wilayah</li>\n",
+    "    <li>Beberapa spesies hewan tertentu di suatu hutan lindung</li>\n",
+    "    <li>3 jenis kendaraan di Jakarta</li>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
