--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -63,6 +63,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>03. Statistika & Parameter</h2>\n",
+    "<ol>\n",
+    "  <li><strong>Parameter</strong> -> Penjelasan atas populasi</li>\n",
+    "    <ul>\n",
+    "      <li>Mengukur revenue dari setiap orang di dalam segmen</li>\n",
+    "    </ul>\n",
+    "  <li><strong>Statistika</strong> -> Menjelaskan sampel dari populasi</li>\n",
+    "    <ul>\n",
+    "      <li>Mengambil 20% orang dari setiap segmen</li>\n",
+    "    </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
