Data Kualitatif & Data Kuantitatif

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -76,6 +76,55 @@
     "    </ul>\n",
     "</ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>04. Data Kualitatif & Data Kuantitatif</h2>\n",
+    "<ol>\n",
+    "  <h4><strong>Data Kualitatif</strong></h4>\n",
+    "  <ul>\n",
+    "    <li><strong>Definisi</strong> : Data yang diperoleh dari mengkategorikan atau menjelaskan suatu atribut dari populasi atau sampel</li>\n",
+    "    <li>Data Kualitatif = Data Kategorik</li>\n",
+    "    <ul>\n",
+    "      <strong>Contoh Data Kualitatif</strong>\n",
+    "      <li>Warna Rambut</li>\n",
+    "      <li>Golongan Darah</li>\n",
+    "      <li>Nama Jalan</li>\n",
+    "      <li>Nama Produk</li>\n",
+    "    </ul>\n",
+    "  </ul>\n",
+    "  <h4><strong>Data Kuantitatif</strong></h4>\n",
+    "  <ul>\n",
+    "    <li><strong>Definisi</strong> : Data yang diperoleh dari ukuran atau hitungan suatu atribut dari populasi atau sampel</li>\n",
+    "    <li><strong>Data Kuantitatif</strong></li>\n",
+    "    <ol>\n",
+    "      <li><strong>Data Diskrit</strong></li>\n",
+    "      <ul>\n",
+    "        <li>Definisi -> Data yang diperoleh dari hasil perhitungan</li>\n",
+    "        <li><strong>Contoh Data Diskrit</strong></li>\n",
+    "        <ul>\n",
+    "          <li>Jumlah Pelanggan</li>\n",
+    "          <li>Jumlah Produk</li>\n",
+    "          <li>Jumlah Telepom yang diterima oleh Customer</li>\n",
+    "        </ul>\n",
+    "      </ul>\n",
+    "      <li><strong>Data Kontinyu</strong></li>\n",
+    "      <ul>\n",
+    "        <li>Definisi -> Data yang diperoleh dari hasil perhitungan namun dapat memuat rasio, desima, atau bilangan irasional</li>\n",
+    "        <li><strong>Contoh Data Kontinyu</strong></li>\n",
+    "        <ul>\n",
+    "          <li>Tinggi Badan</li>\n",
+    "          <li>Berat Badan</li>\n",
+    "          <li>Waktu</li>\n",
+    "          <li>Gaji</li>\n",
+    "        </ul>      \n",
+    "      </ul>\n",
+    "    </ol>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
   }
  ],
  "metadata": {
