--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -125,6 +125,31 @@
     "  </ul>\n",
     "</ol>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>05. Tipe Statistika</h2>\n",
+    "<ol>\n",
+    "  <li><strong>Statistika Deskriptif</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Definisi -> Digunakan untuk melakukan eksplorasi data, biasanya menggunakan teknik visualisasi data sebagai alat bantu untuk memahami bagaimana bentuk distribusi dan hubungan antara satu titik data dengan titik data lainnya</li>\n",
+    "    <li><strong>Melakukan Eksplorasi Data</strong></li>\n",
+    "    <li><strong>Teknik Visualisasi Data</strong></li>\n",
+    "  </ul>\n",
+    "  <li><strong>Statistika Inferensial</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Definisi -> Digunakan untuk melakukan pengambilan keputusan atas suatu simpulan terkait dengan data yang sedang dianalisa. Statistika inferensi memungkinkan kita mengambil kesimpulan dari suatu populasi dengan menggunakan sampel yang diambil dari populasi tersebut</li>\n",
+    "    <li><strong>Pengambilan Keputusan Atas Suatu Populasi dengan Menggunakan Sampel</strong></li>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
