Skala Pengukuran - Data Kategorikal

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -149,6 +149,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>06. Skala Pengukuran - Data Kategorikal</h2>\n",
+    "<ol>\n",
+    "  <li><strong>Skala Nominal</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Definisi -> Skala yang digunakan untuk <strong>mengkategorikan</strong> suatu objek pengamatan dengan pengamatan lainnya</li>\n",
+    "    <li>Contoh Skala Nominal</li>\n",
+    "    <ul>\n",
+    "      <li>Gender</li>\n",
+    "      <li>Kategori Barang</li>\n",
+    "      <li>Domisili</li>\n",
+    "      <li>Menu Makanan</li>\n",
+    "    </ul>\n",
+    "  </ul>\n",
+    "  <li><strong>Skala Ordinal</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Definisi Skala yang digunakan untuk <strong>mengurutkan</strong> suatu objek pengamatan dimana suatu titik pengamatan memiliki nilai yang lebih rendah atau tinggi dibanding nilai lainnya</li>\n",
+    "    <li>Contoh Skala Ordinal</li>\n",
+    "    <ul>\n",
+    "      <li>Ukuran Baju</li>\n",
+    "      <li>Tingkat Pendidikan</li>\n",
+    "      <li>Jabatan</li>\n",
+    "      <li>Rating Tempat Makan</li>\n",
+    "    </ul>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
